# lab17

./: Makefile  README.md  docker-compose.yml  initdb.sql
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
proxy/: todos.conf
proxy/static/: index.html
proxy/static/js/: script_vue.js
